# Molsim-source-solutions

./: .gitignore  CMakeLists.txt  README.md  env.yml  pyproject.toml  setup.py  todo.md
Chapter03_Stat_mech/C/1-DistributionOfParticles/Source/: ran_uniform.c
Chapter03_Stat_mech/C/2-BoltzmannDistribution/Source/: Makefile  boltzmann.c
Chapter03_Stat_mech/C/4-RandomWalk1D/Source/: Makefile  random1d.c
Chapter03_Stat_mech/C/5-RandomWalk2D/Source/: Makefile
Chapter03_Stat_mech/Fortran/1-DistributionOfParticles/Source/: Makefile  distribution.f
Chapter03_Stat_mech/Fortran/3-CoupledHarmonicOscillator/Source/: Makefile
Chapter03_Stat_mech/Fortran/4-RandomWalk1D/Source/: Makefile
Chapter03_Stat_mech/Fortran/5-RandomWalk2D/Source/: Makefile
Chapter03_Stat_mech/python/: 1_distributionOfParticles.ipynb  2_boltzmannDistribution.ipynb  4_randomWalk1D.ipynb  5_randomWalk2D.ipynb
Chapter04_basic_mc/C/1-CalculationOfPi/Source/: pi.c
Chapter04_basic_mc/C/2-PhotonGas/Source/: Makefile  photon.c
Chapter04_basic_mc/C/4-MCLennardJones/Run/: run
Chapter04_basic_mc/C/4-MCLennardJones/Source/: energy.c  mc_nvt.c  sample.c
Chapter04_basic_mc/C/5-ParallelTempering/Source/: Makefile  sample_xcoord.c
Chapter04_basic_mc/Fortran/1-CalculationOfPi/Run/: plot.py
Chapter04_basic_mc/Fortran/1-CalculationOfPi/Source/: Makefile  pi.f
Chapter04_basic_mc/Fortran/2-PhotonGas/Run/: plot.py  run
Chapter04_basic_mc/Fortran/2-PhotonGas/Source/: Makefile
Chapter04_basic_mc/Fortran/4-MCLennardJones/Run/: energy  plot  plot.py  pressure  run
Chapter04_basic_mc/python/: 3.cpp  3.ixx  3_hardDisks.ipynb
Chapter05_basic_md/C/1-MD/Run/: input
auxiliary/: photonGas.ipynb
day1_StatMech/: 1_distributionOfParticles.ipynb  2_boltzmannDistribution.ipynb  3_coupledHarmonicOscillator.ipynb  5_randomWalk2D.ipynb  distributions.ipynb  randomWalk.ipynb
day2_BasicMC/: 5_parallelTempering.ipynb  LennardJonesMC.ipynb  calculationOfPi.ipynb  hardDisks.ipynb  hardDisksBenchmark.ipynb  hardDisks_cpp.ipynb  hardDisks_python.ipynb  lennardJonesMC.py
day2_BasicMC/3_HardDisks/: 3_hardDisks.ipynb  CMakeLists.txt  hardDisks.cpp  hardDisks.h  test.ipynb  test.py
day2_BasicMC/4_MCLennardJones/: CMakeLists.txt  Makefile  mc.cpp  mc.h  test.py  utils.h  writePDB.h
day3_BasicMD/: ewald.ipynb  lennardJonesMD.ipynb  lennardJonesOptimization.ipynb  mullerBrown.ipynb
day3_BasicMD/1-MD/: CMakeLists.txt  Dockerfile  double3.h  env.yml  pybindings.cpp  test.ipynb  test.py  utils.h  writePDB.h
day3_BasicMD/2-Ewald/: ewald.ipynb
day4_AdvancedMC/: mcnpt.py  nptMC.ipynb  parallelTempering.ipynb
day5_AdvancedMD/: ewald.ipynb  mullerBrownUS.ipynb  noseHooverMD.ipynb
docs/: CMakeLists.txt  Doxyfile
molsim/: __init__.py  hardDiskVisualization.py  hardDisks.py  mullerBrown.py  pybindings.cpp
molsim/molecularDynamics/: md.cpp  md.h  sample.cpp  sample.h  thermostats.cpp
molsim/monteCarlo/: energyVirial.h  mc.cpp  mc.h  moves.cpp
molsim/utils/: double3.h
src/: pybindings.cpp
src/hardDisks/: hardDisks.cpp  hardDisks.h
src/molecularDynamics/: md.cpp  md.h  sample.cpp  sample.h  thermostats.cpp  thermostats.h
src/monteCarlo/: energyVirial.h  mc.cpp  mc.h  moves.cpp
src/utils/: double2.h  double3.h  utils.h  writePDB.h
(+165 files in other folders)
