[build-system]
requires = ["wheel", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "molsim"
version = "1.0.0"
description = "Code accompanying exercises for the Molecular Simulation course."
authors = [
    { name = "Drs. Youri Ran, University of Amsterdam" },
    { name = "Drs. Rik Breebaart, University of Amsterdam" },
    { name = "Dr. Jocelyne Vreede, University of Amsterdam" },
    { name = "Dr. David Dubbeldam, University of Amsterdam", email = "d.dubbeldam@uva.nl" },
]
dependencies = ["pybind11", "numpy", "matplotlib", "scipy"]
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
readme = "README.md"

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.build-type = "Release"
wheel.cmake = true
build-dir = "build/python"
sdist.exclude = ["*.cpp", "*.h", "CMakeLists.txt"]
